# repo-review

./: .flake8  .gitignore  .pre-commit-config.yaml  POCs.ipynb  README.md  git_for_files.ipynb  main.py  pyproject.toml  requirements.txt
POCs/: POCs.ipynb  graphing.ipynb  programming_language_extensions.py  repository_processing.ipynb
analyzed_repos/: EleutherAI_o_gpt-neox  google_o_python-fire  salesforce_o_CodeGen
app/: main.py
benchmarks/: bechmarks.md
benchmarks/EleutherAI_gpt-neox/: profile.html  profile.json
benchmarks/google_python-fire/: profile.html  profile.json
benchmarks/python_mypy/: profile.html  profile.json
frontend/app/: main.py
python_components/: large_lang_model.py  networkx_graphing.py  old_types.py  types.py
scripts/: secrets_to_toml.py
src/: context_analysis.py  custom_language_parsers.py  files_from_github.py  generics.py  graphing.py  mainv2.py  repository_processing.py  streamlit_ui.py  ui.py
src/rust_components/: main.rs
src/streamlit_components/graph_visualizer/: __init__.py
src/streamlit_components/graph_visualizer/frontend/: package-lock.json  package.json
src/streamlit_components/graph_visualizer/frontend/src/: MyComponent.tsx  typings.d.ts
streamlit_components/graph_visualizer/frontend/: package.json
streamlit_components/graph_visualizer/frontend/src/: MyComponent.tsx  index.tsx
