[tool.poetry]
name = "repo-review"
version = "2022.12.13"
description = ""
authors = ["Foxicution <foxicution@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^2.8.8"
openai = "^0.25.0"
protobuf = "3.20.*"
PyGithub = "^1.57"
pyvis = "^0.3.1"
streamlit = "^1.15.2"
toml = "^0.10.2"
toolz = "^0.12.0"
google-cloud-firestore = "^2.7.3"
lambdas = "^0.1.0"
option = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
